--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CAMELLYA WOODS HONG KONG HOLDINGS LIMITED</title>
+    <title>CAMELLYA WOODS HONG KONG</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/your-fontawesome-kit.js" crossorigin="anonymous"></script>
@@ -152,7 +152,7 @@
     <header>
         <nav id="navbar">
             <div class="container">
-                <img src="Logo.svg" alt="CAMELLYA WOODS HONG KONG HOLDINGS LIMITED" class="logo-img">
+                <img src="Logo.svg" alt="CAMELLYA WOODS HONG KONG" class="logo-img">
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#features">Features</a></li>
@@ -169,7 +169,7 @@
     <main>
         <section id="home" class="hero">
             <div class="hero-content">
-                <h1>CAMELLYA WOODS HONG KONG HOLDINGS LIMITED</h1>
+                <h1>CAMELLYA WOODS HONG KONG</h1>
                 <p>Innovative solutions for modern living and working spaces</p>
                 <div class="cta-buttons">
                     <a href="#features" class="btn primary">Explore Features</a>
